--- a/src/main/webapp/relatorios/avaliacao/avaliacao_identificacao_programa.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/avaliacao_identificacao_programa.jrxml
@@ -19,13 +19,42 @@
 	<parameter name="param_variacao" class="java.math.BigDecimal" isForPrompting="false">
 		<parameterDescription><![CDATA[]]></parameterDescription>
 	</parameter>
-	<queryString>
-		<![CDATA[]]>
-	</queryString>
+	<parameter name="param_imagem" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_id_exerc" class="java.lang.Long" isForPrompting="false">
+		<parameterDescription><![CDATA[]]></parameterDescription>
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="param_id_prog" class="java.lang.Long" isForPrompting="false">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="param_id_user" class="java.lang.Long" isForPrompting="false">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="param_exercicio" class="java.lang.String" isForPrompting="false">
+		<parameterDescription><![CDATA[]]></parameterDescription>
+	</parameter>
+	<parameter name="param_ppa" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_cod_uo" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_ano" class="java.lang.Integer" isForPrompting="false"/>
+	<parameter name="listFisicoFinanceiroMensalSiafem" class="java.util.List"/>
+	<parameter name="param_dot_empenhado" class="java.math.BigDecimal"/>
+	<parameter name="param_dot_liquidado" class="java.math.BigDecimal"/>
+	<parameter name="param_dot_pago" class="java.math.BigDecimal"/>
+	<parameter name="diretrizes" class="java.util.List"/>
+	<parameter name="painelAssociado" class="java.util.List"/>
+	<parameter name="intermediarioAssociado" class="java.util.List"/>
+	<parameter name="analise" class="java.util.List"/>
+	<parameter name="mediaEficaciaFisicoFinanceira" class="java.math.BigDecimal"/>
+	<parameter name="mediaEficienciaFisicoFinanceira" class="java.math.BigDecimal"/>
+	<parameter name="avaliacaoFisicoFinanceira" class="java.util.List"/>
+	<parameter name="resultado" class="java.util.List"/>
+	<parameter name="recomendacao" class="java.lang.String"/>
+	<parameter name="chart" class="java.awt.image.BufferedImage"/>
 	<pageHeader>
 		<band height="127" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement key="" positionType="Float" mode="Opaque" x="-20" y="20" width="802" height="14" backcolor="#C8C8C8" uuid="f088cf57-ecea-449d-a0f1-1c891b5123a4"/>
+				<reportElement key="" positionType="Float" mode="Opaque" x="-20" y="17" width="802" height="14" backcolor="#C8C8C8" uuid="f088cf57-ecea-449d-a0f1-1c891b5123a4"/>
 				<textElement verticalAlignment="Middle" markup="styled">
 					<font fontName="SansSerif" size="8" pdfFontName="Helvetica-Bold"/>
 					<paragraph leftIndent="5" spacingBefore="1" spacingAfter="1"/>
@@ -33,7 +62,7 @@
 				<textFieldExpression><![CDATA["("+$P{param_cod_prog}+") - "+$P{param_prog}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" mode="Opaque" x="-20" y="34" width="802" height="18" backcolor="#ECECEC" uuid="e5f2b3f9-36bb-408e-9b78-105c0d37cb55"/>
+				<reportElement positionType="Float" mode="Opaque" x="-20" y="31" width="802" height="18" backcolor="#ECECEC" uuid="e5f2b3f9-36bb-408e-9b78-105c0d37cb55"/>
 				<textElement verticalAlignment="Middle" markup="styled">
 					<font fontName="SansSerif" size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
@@ -41,7 +70,7 @@
 				<textFieldExpression><![CDATA["<b>Unidade Executora:</b> "+$P{param_unidade_executora}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" mode="Transparent" x="-20" y="52" width="802" height="18" backcolor="#FEFEFE" uuid="1efde0ce-275c-490c-9914-472f0097bf59"/>
+				<reportElement positionType="Float" mode="Transparent" x="-20" y="49" width="802" height="18" backcolor="#FEFEFE" uuid="1efde0ce-275c-490c-9914-472f0097bf59"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle" markup="styled">
 					<font fontName="SansSerif" size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
@@ -49,7 +78,7 @@
 				<textFieldExpression><![CDATA["<b>Problema:</b> "+$P{param_problema}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" mode="Opaque" x="-20" y="106" width="802" height="18" backcolor="#ECECEC" uuid="385cc38e-28fe-463d-b1db-c38b33bcc597"/>
+				<reportElement positionType="Float" mode="Opaque" x="-20" y="103" width="802" height="18" backcolor="#ECECEC" uuid="385cc38e-28fe-463d-b1db-c38b33bcc597"/>
 				<textElement verticalAlignment="Middle" markup="styled">
 					<font fontName="SansSerif" size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
@@ -59,7 +88,7 @@
 "      <b> Variação(%):</b> "+(new DecimalFormat("#,###,##0.00")).format($P{param_variacao})]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement mode="Opaque" x="-20" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="56fd9096-2a96-4cc1-8e91-814adcf6d7a8"/>
+				<reportElement mode="Opaque" x="-20" y="-3" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="56fd9096-2a96-4cc1-8e91-814adcf6d7a8"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10" pdfFontName="Helvetica-Bold"/>
 					<paragraph leftIndent="5"/>
@@ -67,7 +96,7 @@
 				<text><![CDATA[1. IDENTIFICAÇÃO DO PROGRAMA]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" isPrintRepeatedValues="false" mode="Opaque" x="-20" y="70" width="802" height="18" backcolor="#ECECEC" uuid="023f795a-5a18-47ab-90f2-c5bc382173d8"/>
+				<reportElement positionType="Float" isPrintRepeatedValues="false" mode="Opaque" x="-20" y="67" width="802" height="18" backcolor="#ECECEC" uuid="023f795a-5a18-47ab-90f2-c5bc382173d8"/>
 				<textElement verticalAlignment="Middle" markup="styled">
 					<font fontName="SansSerif" size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
@@ -75,7 +104,7 @@
 				<textFieldExpression><![CDATA["<b>Objetivo:</b> "+ $P{param_objetivo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" mode="Transparent" x="-20" y="88" width="802" height="18" backcolor="#FEFEFE" uuid="e0cf55a5-4198-4b0b-b0f1-56d0307f5f8d"/>
+				<reportElement positionType="Float" mode="Transparent" x="-20" y="85" width="802" height="18" backcolor="#FEFEFE" uuid="e0cf55a5-4198-4b0b-b0f1-56d0307f5f8d"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle" markup="styled">
 					<font fontName="SansSerif" size="8"/>
 					<paragraph leftIndent="5" spacingBefore="2" spacingAfter="2"/>
@@ -84,4 +113,108 @@
 			</textField>
 		</band>
 	</pageHeader>
+	<summary>
+		<band height="25">
+			<subreport runToBottom="true" overflowType="Stretch">
+				<reportElement positionType="Float" isPrintRepeatedValues="false" x="-20" y="0" width="802" height="22" isRemoveLineWhenBlank="true" uuid="77afe421-90b3-4014-9393-90056e1c063a"/>
+				<subreportParameter name="param_cod_prog">
+					<subreportParameterExpression><![CDATA[$P{param_cod_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_prog">
+					<subreportParameterExpression><![CDATA[$P{param_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_unidade_executora">
+					<subreportParameterExpression><![CDATA[$P{param_unidade_executora}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_problema">
+					<subreportParameterExpression><![CDATA[$P{param_problema}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_objetivo">
+					<subreportParameterExpression><![CDATA[$P{param_objetivo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_publico_alvo">
+					<subreportParameterExpression><![CDATA[$P{param_publico_alvo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_inicial">
+					<subreportParameterExpression><![CDATA[$P{param_dot_inicial}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_atual">
+					<subreportParameterExpression><![CDATA[$P{param_dot_atual}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_variacao">
+					<subreportParameterExpression><![CDATA[$P{param_variacao}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_imagem">
+					<subreportParameterExpression><![CDATA[$P{param_imagem}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="SUBREPORT_DIR">
+					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_exerc">
+					<subreportParameterExpression><![CDATA[$P{param_id_exerc}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_prog">
+					<subreportParameterExpression><![CDATA[$P{param_id_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_user">
+					<subreportParameterExpression><![CDATA[$P{param_id_user}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_exercicio">
+					<subreportParameterExpression><![CDATA[$P{param_exercicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ppa">
+					<subreportParameterExpression><![CDATA[$P{param_ppa}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_uo">
+					<subreportParameterExpression><![CDATA[$P{param_cod_uo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ano">
+					<subreportParameterExpression><![CDATA[$P{param_ano}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="listFisicoFinanceiroMensalSiafem">
+					<subreportParameterExpression><![CDATA[$P{listFisicoFinanceiroMensalSiafem}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_empenhado">
+					<subreportParameterExpression><![CDATA[$P{param_dot_empenhado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_liquidado">
+					<subreportParameterExpression><![CDATA[$P{param_dot_liquidado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_pago">
+					<subreportParameterExpression><![CDATA[$P{param_dot_pago}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="diretrizes">
+					<subreportParameterExpression><![CDATA[$P{diretrizes}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="painelAssociado">
+					<subreportParameterExpression><![CDATA[$P{painelAssociado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="intermediarioAssociado">
+					<subreportParameterExpression><![CDATA[$P{intermediarioAssociado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="analise">
+					<subreportParameterExpression><![CDATA[$P{analise}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="mediaEficaciaFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{mediaEficaciaFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="mediaEficienciaFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{mediaEficienciaFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="avaliacaoFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{avaliacaoFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="resultado">
+					<subreportParameterExpression><![CDATA[$P{resultado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="recomendacao">
+					<subreportParameterExpression><![CDATA[$P{recomendacao}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="chart">
+					<subreportParameterExpression><![CDATA[$P{chart}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportExpression><![CDATA["sub_relatorio_grafico_fisico_financeiro.jasper"]]></subreportExpression>
+			</subreport>
+		</band>
+	</summary>
 </jasperReport>
