--- a/src/main/webapp/relatorios/avaliacao/relatorio_avaliacao_programa2.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/relatorio_avaliacao_programa2.jrxml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_fisico_financeira" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
-	<property name="ireport.zoom" value="1.771561000000001"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="relatorio_financeiro_detalhamento_acao" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" uuid="a7091f0a-ffd3-437f-9832-e894b8881c6b">
+	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
-	<parameter name="param_id_prog" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long(29)]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_id_exerc" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long(2)]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_id_user" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long (2154)]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_cod_prog" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("0546")]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_cod_uo" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("13202")]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_ano" class="java.lang.Integer" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Integer(2016)]]></defaultValueExpression>
-	</parameter>
+	<property name="ireport.y" value="1"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<parameter name="param_imagem" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_id_exerc" class="java.lang.Long" isForPrompting="false">
+		<parameterDescription><![CDATA[]]></parameterDescription>
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="param_id_prog" class="java.lang.Long" isForPrompting="false">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="param_cod_prog" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="param_prog" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="param_unidade_executora" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="param_problema" class="java.lang.String" isForPrompting="false"/>
@@ -32,10 +31,15 @@
 	<parameter name="param_dot_inicial" class="java.math.BigDecimal" isForPrompting="false"/>
 	<parameter name="param_dot_atual" class="java.math.BigDecimal" isForPrompting="false"/>
 	<parameter name="param_variacao" class="java.math.BigDecimal" isForPrompting="false"/>
+	<parameter name="param_id_user" class="java.lang.Long" isForPrompting="false">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<parameter name="param_exercicio" class="java.lang.String" isForPrompting="false">
 		<parameterDescription><![CDATA[]]></parameterDescription>
 	</parameter>
 	<parameter name="param_ppa" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_cod_uo" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_ano" class="java.lang.Integer" isForPrompting="false"/>
 	<parameter name="listFisicoFinanceiroMensalSiafem" class="java.util.List"/>
 	<parameter name="param_dot_empenhado" class="java.math.BigDecimal"/>
 	<parameter name="param_dot_liquidado" class="java.math.BigDecimal"/>
@@ -49,63 +53,60 @@
 	<parameter name="avaliacaoFisicoFinanceira" class="java.util.List"/>
 	<parameter name="resultado" class="java.util.List"/>
 	<parameter name="recomendacao" class="java.lang.String"/>
+	<parameter name="chart" class="java.awt.image.BufferedImage"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="exercicioTopicoAvaliacao" class="avaliacao.model.ExercicioTopicoAvaliacao"/>
-	<field name="resposta" class="java.lang.String"/>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
 	<title>
-		<band/>
-	</title>
-	<detail>
-		<band height="29" splitType="Immediate">
-			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="0" y="19" width="802" height="10" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
-				<textElement textAlignment="Justified" markup="html">
-					<font size="8"/>
+		<band height="52" splitType="Stretch">
+			<image>
+				<reportElement x="0" y="0" width="79" height="47" uuid="e8352ace-3b4e-4323-88ff-a9ee324187cb"/>
+				<imageExpression><![CDATA[new File($P{param_imagem})]]></imageExpression>
+			</image>
+			<line>
+				<reportElement x="0" y="47" width="802" height="1" uuid="bcd512e2-fafc-4121-908e-1c93b22d5d1f"/>
+			</line>
+			<staticText>
+				<reportElement x="80" y="2" width="722" height="14" uuid="a59fcf0a-0450-4a96-975c-f3e428fbf54f"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Arial" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{resposta}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" mode="Opaque" x="0" y="4" width="802" height="12" backcolor="#F0F0F0" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
-				<textElement markup="html">
-					<font fontName="Arial" size="8" isBold="true"/>
-					<paragraph leftIndent="10"/>
+				<text><![CDATA[Governo do Estado do Maranhão]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="80" y="16" width="723" height="14" uuid="b0f9b314-13d9-41a3-911c-bccb2b470f86"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Arial" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{exercicioTopicoAvaliacao}.getTopicoAvaliacao().getDescricao()]]></textFieldExpression>
+				<text><![CDATA[Secretaria de Estado do Planejamento e Orçamento]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="80" y="31" width="723" height="16" uuid="c8f0fcce-9ccf-40e2-b1c3-b330a37b1ab1"/>
+				<textElement verticalAlignment="Middle" markup="html">
+					<font fontName="Arial" isBold="true" pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Relatório de Avaliação do "+$P{param_ppa}+" - Exercício "+$P{param_ano}]]></textFieldExpression>
 			</textField>
 		</band>
-	</detail>
-	<summary>
-		<band height="28">
-			<subreport runToBottom="true" overflowType="Stretch">
-				<reportElement positionType="Float" isPrintRepeatedValues="false" x="1" y="3" width="802" height="22" isRemoveLineWhenBlank="true" uuid="9a8f3cc8-ca2f-43ae-803b-2f12bfab506a"/>
-				<subreportParameter name="param_id_prog">
-					<subreportParameterExpression><![CDATA[$P{param_id_prog}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="param_id_exerc">
-					<subreportParameterExpression><![CDATA[$P{param_id_exerc}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="param_id_user">
-					<subreportParameterExpression><![CDATA[$P{param_id_user}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="param_cod_prog">
-					<subreportParameterExpression><![CDATA[$P{param_cod_prog}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="param_cod_uo">
-					<subreportParameterExpression><![CDATA[$P{param_cod_uo}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="param_ano">
-					<subreportParameterExpression><![CDATA[$P{param_ano}]]></subreportParameterExpression>
-				</subreportParameter>
+	</title>
+	<detail>
+		<band height="31" splitType="Stretch">
+			<subreport>
+				<reportElement isPrintRepeatedValues="false" x="0" y="0" width="802" height="31" isRemoveLineWhenBlank="true" uuid="24ef47b7-feb6-4155-b900-544d0041c020"/>
 				<subreportParameter name="param_imagem">
 					<subreportParameterExpression><![CDATA[$P{param_imagem}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="SUBREPORT_DIR">
 					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_exerc">
+					<subreportParameterExpression><![CDATA[$P{param_id_exerc}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_prog">
+					<subreportParameterExpression><![CDATA[$P{param_id_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_prog">
+					<subreportParameterExpression><![CDATA[$P{param_cod_prog}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="param_prog">
 					<subreportParameterExpression><![CDATA[$P{param_prog}]]></subreportParameterExpression>
@@ -131,11 +132,20 @@
 				<subreportParameter name="param_variacao">
 					<subreportParameterExpression><![CDATA[$P{param_variacao}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="param_id_user">
+					<subreportParameterExpression><![CDATA[$P{param_id_user}]]></subreportParameterExpression>
+				</subreportParameter>
 				<subreportParameter name="param_exercicio">
 					<subreportParameterExpression><![CDATA[$P{param_exercicio}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="param_ppa">
 					<subreportParameterExpression><![CDATA[$P{param_ppa}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_uo">
+					<subreportParameterExpression><![CDATA[$P{param_cod_uo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ano">
+					<subreportParameterExpression><![CDATA[$P{param_ano}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="listFisicoFinanceiroMensalSiafem">
 					<subreportParameterExpression><![CDATA[$P{listFisicoFinanceiroMensalSiafem}]]></subreportParameterExpression>
@@ -176,9 +186,11 @@
 				<subreportParameter name="recomendacao">
 					<subreportParameterExpression><![CDATA[$P{recomendacao}]]></subreportParameterExpression>
 				</subreportParameter>
-				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{resultado})]]></dataSourceExpression>
-				<subreportExpression><![CDATA["sub_relatorio_avaliacao_resultado.jasper"]]></subreportExpression>
+				<subreportParameter name="chart">
+					<subreportParameterExpression><![CDATA[$P{chart}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportExpression><![CDATA["avaliacao_identificacao_programa.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-	</summary>
+	</detail>
 </jasperReport>
