--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_diretriz_associada.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_diretriz_associada.jrxml
@@ -1,22 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" pageWidth="842" pageHeight="150" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" isIgnorePagination="true" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" printOrder="Horizontal" pageWidth="842" pageHeight="150" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="0" bottomMargin="0" isFloatColumnFooter="true" isIgnorePagination="true" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<parameter name="param_id_prog" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long(58)]]></defaultValueExpression>
-	</parameter>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<parameter name="param_imagem" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="param_id_exerc" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long(1)]]></defaultValueExpression>
+		<parameterDescription><![CDATA[]]></parameterDescription>
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="param_id_prog" class="java.lang.Long" isForPrompting="false">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="param_cod_prog" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_prog" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_unidade_executora" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_problema" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_objetivo" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_publico_alvo" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_dot_inicial" class="java.math.BigDecimal" isForPrompting="false"/>
+	<parameter name="param_dot_atual" class="java.math.BigDecimal" isForPrompting="false"/>
+	<parameter name="param_variacao" class="java.math.BigDecimal" isForPrompting="false"/>
 	<parameter name="param_id_user" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long (2154)]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<queryString>
-		<![CDATA[]]>
-	</queryString>
+	<parameter name="param_exercicio" class="java.lang.String" isForPrompting="false">
+		<parameterDescription><![CDATA[]]></parameterDescription>
+	</parameter>
+	<parameter name="param_ppa" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_cod_uo" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="param_ano" class="java.lang.Integer" isForPrompting="false"/>
+	<parameter name="listFisicoFinanceiroMensalSiafem" class="java.util.List"/>
+	<parameter name="param_dot_empenhado" class="java.math.BigDecimal"/>
+	<parameter name="param_dot_liquidado" class="java.math.BigDecimal"/>
+	<parameter name="param_dot_pago" class="java.math.BigDecimal"/>
+	<parameter name="diretrizes" class="java.util.List"/>
+	<parameter name="painelAssociado" class="java.util.List"/>
+	<parameter name="intermediarioAssociado" class="java.util.List"/>
+	<parameter name="analise" class="java.util.List"/>
+	<parameter name="mediaEficaciaFisicoFinanceira" class="java.math.BigDecimal"/>
+	<parameter name="mediaEficienciaFisicoFinanceira" class="java.math.BigDecimal"/>
+	<parameter name="avaliacaoFisicoFinanceira" class="java.util.List"/>
+	<parameter name="resultado" class="java.util.List"/>
+	<parameter name="recomendacao" class="java.lang.String"/>
 	<field name="_THIS" class="java.lang.String"/>
 	<title>
 		<band height="34">
@@ -58,8 +94,110 @@
 			</textField>
 		</band>
 	</detail>
+	<summary>
+		<band height="37">
+			<subreport runToBottom="true" overflowType="Stretch">
+				<reportElement positionType="Float" isPrintRepeatedValues="false" x="0" y="9" width="802" height="22" isRemoveLineWhenBlank="true" uuid="2c17a6ab-a133-4a2f-989a-679e6b26c6a2"/>
+				<subreportParameter name="param_id_prog">
+					<subreportParameterExpression><![CDATA[$P{param_id_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_exerc">
+					<subreportParameterExpression><![CDATA[$P{param_id_exerc}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_user">
+					<subreportParameterExpression><![CDATA[$P{param_id_user}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_imagem">
+					<subreportParameterExpression><![CDATA[$P{param_imagem}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="SUBREPORT_DIR">
+					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_prog">
+					<subreportParameterExpression><![CDATA[$P{param_cod_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_prog">
+					<subreportParameterExpression><![CDATA[$P{param_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_unidade_executora">
+					<subreportParameterExpression><![CDATA[$P{param_unidade_executora}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_problema">
+					<subreportParameterExpression><![CDATA[$P{param_problema}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_objetivo">
+					<subreportParameterExpression><![CDATA[$P{param_objetivo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_publico_alvo">
+					<subreportParameterExpression><![CDATA[$P{param_publico_alvo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_inicial">
+					<subreportParameterExpression><![CDATA[$P{param_dot_inicial}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_atual">
+					<subreportParameterExpression><![CDATA[$P{param_dot_atual}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_variacao">
+					<subreportParameterExpression><![CDATA[$P{param_variacao}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_exercicio">
+					<subreportParameterExpression><![CDATA[$P{param_exercicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ppa">
+					<subreportParameterExpression><![CDATA[$P{param_ppa}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_uo">
+					<subreportParameterExpression><![CDATA[$P{param_cod_uo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ano">
+					<subreportParameterExpression><![CDATA[$P{param_ano}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="listFisicoFinanceiroMensalSiafem">
+					<subreportParameterExpression><![CDATA[$P{listFisicoFinanceiroMensalSiafem}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_empenhado">
+					<subreportParameterExpression><![CDATA[$P{param_dot_empenhado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_liquidado">
+					<subreportParameterExpression><![CDATA[$P{param_dot_liquidado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_pago">
+					<subreportParameterExpression><![CDATA[$P{param_dot_pago}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="diretrizes">
+					<subreportParameterExpression><![CDATA[$P{diretrizes}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="painelAssociado">
+					<subreportParameterExpression><![CDATA[$P{painelAssociado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="intermediarioAssociado">
+					<subreportParameterExpression><![CDATA[$P{intermediarioAssociado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="analise">
+					<subreportParameterExpression><![CDATA[$P{analise}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="mediaEficaciaFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{mediaEficaciaFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="mediaEficienciaFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{mediaEficienciaFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="avaliacaoFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{avaliacaoFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="resultado">
+					<subreportParameterExpression><![CDATA[$P{resultado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="recomendacao">
+					<subreportParameterExpression><![CDATA[$P{recomendacao}]]></subreportParameterExpression>
+				</subreportParameter>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{painelAssociado})]]></dataSourceExpression>
+				<subreportExpression><![CDATA["sub_relatorio_avaliacao_painel_associado.jasper"]]></subreportExpression>
+			</subreport>
+		</band>
+	</summary>
 	<noData>
-		<band height="53" splitType="Stretch">
+		<band height="84" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
 				<reportElement positionType="Float" stretchType="RelativeToTallestObject" mode="Transparent" x="0" y="34" width="802" height="17" forecolor="#000000" backcolor="#FEFEFE" uuid="d1b68db6-24e2-4f7d-b320-d4aeb76fe664"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
@@ -84,6 +222,104 @@
 				</textElement>
 				<text><![CDATA[Diretrizes]]></text>
 			</staticText>
+			<subreport runToBottom="true" overflowType="Stretch">
+				<reportElement positionType="Float" isPrintRepeatedValues="false" x="0" y="60" width="802" height="22" isRemoveLineWhenBlank="true" uuid="eaa03265-5943-4f63-9fc6-66bf85e4ae47"/>
+				<subreportParameter name="param_id_prog">
+					<subreportParameterExpression><![CDATA[$P{param_id_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_exerc">
+					<subreportParameterExpression><![CDATA[$P{param_id_exerc}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_id_user">
+					<subreportParameterExpression><![CDATA[$P{param_id_user}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_imagem">
+					<subreportParameterExpression><![CDATA[$P{param_imagem}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="SUBREPORT_DIR">
+					<subreportParameterExpression><![CDATA[$P{SUBREPORT_DIR}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_prog">
+					<subreportParameterExpression><![CDATA[$P{param_cod_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_prog">
+					<subreportParameterExpression><![CDATA[$P{param_prog}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_unidade_executora">
+					<subreportParameterExpression><![CDATA[$P{param_unidade_executora}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_problema">
+					<subreportParameterExpression><![CDATA[$P{param_problema}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_objetivo">
+					<subreportParameterExpression><![CDATA[$P{param_objetivo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_publico_alvo">
+					<subreportParameterExpression><![CDATA[$P{param_publico_alvo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_inicial">
+					<subreportParameterExpression><![CDATA[$P{param_dot_inicial}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_atual">
+					<subreportParameterExpression><![CDATA[$P{param_dot_atual}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_variacao">
+					<subreportParameterExpression><![CDATA[$P{param_variacao}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_exercicio">
+					<subreportParameterExpression><![CDATA[$P{param_exercicio}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ppa">
+					<subreportParameterExpression><![CDATA[$P{param_ppa}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_cod_uo">
+					<subreportParameterExpression><![CDATA[$P{param_cod_uo}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_ano">
+					<subreportParameterExpression><![CDATA[$P{param_ano}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="listFisicoFinanceiroMensalSiafem">
+					<subreportParameterExpression><![CDATA[$P{listFisicoFinanceiroMensalSiafem}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_empenhado">
+					<subreportParameterExpression><![CDATA[$P{param_dot_empenhado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_liquidado">
+					<subreportParameterExpression><![CDATA[$P{param_dot_liquidado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="param_dot_pago">
+					<subreportParameterExpression><![CDATA[$P{param_dot_pago}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="diretrizes">
+					<subreportParameterExpression><![CDATA[$P{diretrizes}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="painelAssociado">
+					<subreportParameterExpression><![CDATA[$P{painelAssociado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="intermediarioAssociado">
+					<subreportParameterExpression><![CDATA[$P{intermediarioAssociado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="analise">
+					<subreportParameterExpression><![CDATA[$P{analise}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="mediaEficaciaFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{mediaEficaciaFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="mediaEficienciaFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{mediaEficienciaFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="avaliacaoFisicoFinanceira">
+					<subreportParameterExpression><![CDATA[$P{avaliacaoFisicoFinanceira}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="resultado">
+					<subreportParameterExpression><![CDATA[$P{resultado}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="recomendacao">
+					<subreportParameterExpression><![CDATA[$P{recomendacao}]]></subreportParameterExpression>
+				</subreportParameter>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{painelAssociado})]]></dataSourceExpression>
+				<subreportExpression><![CDATA["sub_relatorio_avaliacao_painel_associado.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</noData>
 </jasperReport>
